  `nvim__id_dict`.

BUILD

On Windows, only building with the UCRT runtime is supported.

DEFAULTS

• 'number', 'relativenumber', 'signcolumn', and 'foldcolumn' are disabled in
  |terminal| buffers. See |terminal-config| for an example of changing these defaults.

DIAGNOSTICS

• The "underline" diagnostics handler sorts diagnostics by severity when using
  the "severity_sort" option.

EDITOR

• The order in which signs are placed was changed. Higher priority signs will
  now appear left of lower priority signs.
• |hl-CurSearch| now behaves the same as Vim and no longer updates on every
  cursor movement.
• Moving in the buffer list using |:bnext| and similar commands behaves as
  documented and skips help buffers if run from a non-help buffer, otherwise
  it moves to another help buffer.
• Bells from a |terminal| buffer are now silent by default, unless 'belloff'
  option doesn't contain "term" or "all".

EVENTS

• |vim.ui_attach()| callbacks for |ui-messages| `msg_show` events are executed in
  |api-fast| context.
• New/enhanced arguments in these existing UI events:
  • `cmdline_hide`: `abort` argument indicating if the cmdline was aborted.
  • `cmdline_show`:
    • Prompts that were previously emitted as `msg_show` events, are now routed
      through `cmdline_show`.
    • `hl_id` argument to highlight the prompt text.
  • `msg_show`:
    • `history` argument indicating if the message was added to the history.
    • new message kinds: "bufwrite", "completion", "list_cmd", "lua_print",
      "search_cmd", "undo", "wildlist".

HIGHLIGHTS

• |TermCursorNC| is removed and no longer supported. Unfocused terminals no
  longer have a cursor.

LSP

• |vim.lsp.buf.references()|, |vim.lsp.buf.declaration()|, |vim.lsp.buf.definition()|,
  |vim.lsp.buf.type_definition()|, |vim.lsp.buf.implementation()| and
  |vim.lsp.buf.hover()| now support merging the results of multiple clients
  but no longer trigger the global handlers from `vim.lsp.handlers`